--- a/_config.yml
+++ b/_config.yml
@@ -107,8 +107,8 @@ author:
   name             : "김민주"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "**@miiiinju__**"
-  location         : "Somewhere"
-  email            :
+  location         : "Daegu"
+  email            : "gms07073@naver.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
@@ -287,6 +287,6 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments:  true
       share: true
       related: true
